[package]
name = "axum-on-spin-todo"
authors = ["Hacken Tao <hacken@unrival.gg>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v0.10.0" }
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba" }
axum = {version="0.6.12", features = ["query", "json"], default-features = false}
anyhow = "1"
bytes = "1"
http = "0.2"
futures-executor = "0.3.21"
tower-service = "0.3.1"
uuid = { version = "1.0", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.4.0", features = ["add-extension", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lazy_static = "1.4.0"
serde_json = "1.0"
[workspace]